@@ -1,3 +1,12 @@
+2007-05-10 Peter Brett <peter@peter-b.co.uk>
+
+	* include/prototype.h, src/x_menus.c: Provide
+	  g_file_set_contents() if GLib < 2.8.
+
+	  Patch from Ivan Stankovic, fixing problem with recent files
+	  support where gschem didn't work on systems with older versions
+	  of GLib, due to g_file_set_contents() not being available.
+
 2007-05-05 Peter Brett <peter@peter-b.co.uk>
 
 	* include/prototype.h, lib/system-gschemrc.in, src/gschem.c,
